extends Node
func _on_NIV1_pressed():
	get_tree().change_scene("res://Mundo/Mundo 1.tscn")
	pass


func _on_Niv2_pressed():
	get_tree().change_scene("res://Mundo/mundo 2.tscn")
	pass 



func _on_niv3_pressed():
	get_tree().change_scene("res://Mundo/Mundo 3.tscn")
	pass


func _on_Niv4_pressed():
	get_tree().change_scene("res://Mundo/mundo 4.tscn")
	pass 


func _on_niv5_pressed():
	get_tree().change_scene("res://Mundo/Mundo 5.tscn")
	pass 


func _on_niv6_pressed():
	get_tree().change_scene("res://Mundo/Nivel 6.tscn")
	pass 


func _on_Regresar_pressed():
	get_tree().change_scene("res://Calificaciones/Menu inicial.tscn")
	pass


func _on_niv7_pressed():
	get_tree().change_scene("res://Mundo/Mundo 7.tscn")
	pass


func _on_niv8_pressed():
	get_tree().change_scene("res://Mundo/Mundo 8.tscn")
	pass 


func _on_niv9_pressed():
	get_tree().change_scene("res://Mundo/Mundo 9.tscn")
	pass
